--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 body {
   --blue-hue: 200;
   --shadow-colour: hsla(0, 0%, 20%, .4);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background: hsl(var(--blue-hue), 50%, 60%);
 }
