--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   --blue-hue: 200;
   --shadow-colour: hsla(0, 0%, 20%, .4);
+  --black: #333;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
