--- a/src/app/service-dependency-test/service-dependency-test.component.html
+++ b/src/app/service-dependency-test/service-dependency-test.component.html
@@ -67,8 +67,8 @@
   </p>
   <div class="solution">
 <pre><code>
-  beforeEach(() => {
-    TestBed.configureTestingModule({
+  beforeEach(() => &#123;
+    TestBed.configureTestingModule(&#123;
       providers: [ UnannotatedService ]
     });
     service = TestBed.get(DependencyService);
