--- a/src/app/service-http-test/service-http-test.component.html
+++ b/src/app/service-http-test/service-http-test.component.html
@@ -1,3 +1,7 @@
+<h3>Testing a service that makes HTTP calls</h3>
+
 <p>
-  service-http-test works!
+  Testing HTTP services is one area that I find the Angular docs particularly lacking,
+  so hopefully this is helpful. In this section, we'll look at how we can test that
+  our service makes the correct requests, as well as mocking HTTP responses. 
 </p>
