--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,57 @@
 body {
   --blue-hue: 200;
+  --background-colour-start: hsl(var(--blue-hue), 20%, 50%);
+  --background-colour-middle: hsl(var(--blue-hue), 40%, 60%);
+  --background-colour-end: hsl(var(--blue-hue), 60%, 80%);
   --shadow-colour: hsla(0, 0%, 20%, .4);
   --black: #333;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: hsl(var(--blue-hue), 60%, 80%);
+  background: radial-gradient(circle at top left, var(--background-colour-start) 20%, var(--background-colour-middle) 80%, var(--background-colour-end));
+  margin: 50px;
+}
+
+*:focus {
+  outline: none;
+}
+
+h2, section {
+  background: linear-gradient(to right, hsla(var(--blue-hue), 0%, 100%, .5) 75%, transparent);
+  box-shadow: -2px 2px 4px hsla(0, 100%, 0%, .5);
+}
+
+h2 {
+  padding: 1rem;
+}
+h3 {
+  padding: 0;
+  margin: .5em 0;
+}
+
+section {
+  padding: .5em 1em;
+  margin: 2em 0;
+}
+
+p, pre + div {
+  margin-bottom: 1em;
+}
+
+code, pre {
+  background-color: var(--black);
+  color: #ccc;
+  padding: .25em;
+  line-height: 1.4em;
+}
+
+button {
+  border: none;
+  box-shadow: 1px 1px 2px hsla(0, 0%, 50%, .6);
+  transition: box-shadow .2s;
+  cursor: pointer;
+}
+button:active {
+  box-shadow: none;
 }
