--- a/src/app/contents/contents.component.css
+++ b/src/app/contents/contents.component.css
@@ -5,6 +5,8 @@ ul {
 
 li {
   width: 100%;
+  font-family: monospace;
+  font-size: 1.3em;
 }
 a {
   display: flex;
@@ -19,13 +21,14 @@ a {
   box-shadow: inset 4px 2px 2px hsl(var(--blue-hue), 80%, 30%), 
               inset -4px -2px 2px hsl(var(--blue-hue), 80%, 90%),
               -2px -1px 1px var(--shadow-colour);
-  transition: box-shadow .2s;
+  transition: box-shadow .2s, background-color .2s;
+}
+a:hover {
+  background-color: hsl(var(--blue-hue), 80%, 80%);
 }
 a:active {
   background-color: hsl(var(--blue-hue), 80%, 30%);
-  box-shadow: inset 4px 2px 2px hsl(var(--blue-hue), 80%, 10%), 
-              inset -4px -2px 2px hsl(var(--blue-hue), 80%, 30%),
-              -2px -1px 1px var(--shadow-colour);;
+  box-shadow: none;
 }
 a.pending {
   background-color: hsl(var(--blue-hue), 20%, 70%);
