--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -1,16 +1,21 @@
-:host {
+.test-results {
+  --diameter: 15px;
+  --background-shadow: -1px -1px var(--shadow-colour);
+  --highlight: inset 2px 3px 2px hsla(0, 0%, 100%, .6);
   display: flex;
 }
 
-.test-result {
-  --diameter: 30px;
-  --background-shadow: -1px -1px var(--shadow-colour);
-  --highlight: inset 2px 3px 2px hsla(0, 0%, 100%, .6);
+.test-results > div:first-child {
+  margin-right: 10px;
+}
+
+.light {
   width: var(--diameter);
   height: var(--diameter);
   border-radius: 50%;
   border: 2px solid #333;
   margin-right: 5px;
+  margin-bottom: 5px;
   background-color: #999;
   box-shadow: var(--highlight), var(--background-shadow);
 }
